// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa mute"
  >
    <label
      class="sc-dmyCSP eBqJxY"
      data-name="label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx cIQrnR"
        data-name="heading"
        stile="mute"
      />
      <input
        class="sc-guDLey jofGtu"
        data-error="false"
        data-name="input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa mute"
  >
    <label
      class="sc-dmyCSP eBqJxY"
      data-name="label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx cIQrnR"
        data-name="heading"
        stile="mute"
      />
      <input
        class="sc-guDLey jofGtu error undefined-error"
        data-error="true"
        data-name="input"
        stile="mute"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr"
      data-name="error-message"
    >
      error
    </span>
  </div>
</div>
`;
